feat: final quick rundown